<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".pick.PickSimulationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/number_of_lightbulb_colours"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/number_bulb_colors_edit_text"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:hint="@string/hint_text"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/quantity_of_each_lightbulb_colour"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/numb_each_color_edit_text"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="end"

            android:hint="@string/hint_text"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/number_of_lightbulbs_to_pick"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/number_picks_edit_text"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:hint="@string/hint_text"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/number_of_simulations"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/number_simulations_edit_text"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:hint="@string/hint_text"
            android:inputType="number" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/run_simulation" />

    <TextView
        android:id="@+id/output_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:textSize="16sp"
        tools:text="@string/results" />

</LinearLayout>